name:                yandex-direct
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/yandex-direct#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Yandex
  other-modules:       Yandex.Direct
                       Yandex.Direct.Wordstat
                       Yandex.Direct.Types
                       Yandex.Direct.Base
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , lens
                     , lens-aeson
                     , text
                     , wreq
  default-language:    Haskell2010

executable yandex-direct-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , yandex-direct
  default-language:    Haskell2010

test-suite yandex-direct-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yandex-direct
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yandex-direct
